Implemented video subsystem

--- a/NETSDL2/NETSDL2.vcxproj
+++ b/NETSDL2/NETSDL2.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="include\video\PixelFormat.h" />
     <ClInclude Include="include\video\Rect.h" />
     <ClInclude Include="include\video\SysWMInfo.h" />
+    <ClInclude Include="include\video\Video.h" />
     <ClInclude Include="include\video\Window.h" />
   </ItemGroup>
   <ItemGroup>
@@ -178,6 +179,7 @@
     <ClCompile Include="src\video\PixelFormat.cpp" />
     <ClCompile Include="src\video\Rect.cpp" />
     <ClCompile Include="src\video\SysWMInfo.cpp" />
+    <ClCompile Include="src\video\Video.cpp" />
     <ClCompile Include="src\video\Window.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
