--- a/NETSDL2/NETSDL2.vcxproj.filters
+++ b/NETSDL2/NETSDL2.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClInclude Include="include\internal\StringMarshal.h">
       <Filter>헤더 파일\internal</Filter>
     </ClInclude>
+    <ClInclude Include="include\video\Video.h">
+      <Filter>헤더 파일\video</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp">
@@ -145,6 +148,9 @@
     </ClCompile>
     <ClCompile Include="src\internal\StringMarshal.cpp">
       <Filter>소스 파일\internal</Filter>
+    </ClCompile>
+    <ClCompile Include="src\video\Video.cpp">
+      <Filter>소스 파일\video</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
