--- a/NETSDL2/NETSDL2.vcxproj.filters
+++ b/NETSDL2/NETSDL2.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClInclude Include="include\video\Video.h">
       <Filter>헤더 파일\video</Filter>
     </ClInclude>
+    <ClInclude Include="include\core\Hint.h">
+      <Filter>헤더 파일\core</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp">
@@ -151,6 +154,9 @@
     </ClCompile>
     <ClCompile Include="src\video\Video.cpp">
       <Filter>소스 파일\video</Filter>
+    </ClCompile>
+    <ClCompile Include="src\core\Hint.cpp">
+      <Filter>소스 파일\core</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
