--- a/NETSDL2/NETSDL2.vcxproj.filters
+++ b/NETSDL2/NETSDL2.vcxproj.filters
@@ -147,6 +147,9 @@
     <ClInclude Include="include\video\Render.h">
       <Filter>헤더 파일\video</Filter>
     </ClInclude>
+    <ClInclude Include="include\video\Vertex.h">
+      <Filter>헤더 파일\video</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp">
@@ -258,6 +261,9 @@
       <Filter>소스 파일\video</Filter>
     </ClCompile>
     <ClCompile Include="src\video\Render.cpp">
+      <Filter>소스 파일\video</Filter>
+    </ClCompile>
+    <ClCompile Include="src\video\Vertex.cpp">
       <Filter>소스 파일\video</Filter>
     </ClCompile>
   </ItemGroup>
