--- a/NETSDL2/NETSDL2.vcxproj.filters
+++ b/NETSDL2/NETSDL2.vcxproj.filters
@@ -180,6 +180,12 @@
     <ClInclude Include="include\events\Sensors.h">
       <Filter>헤더 파일\events</Filter>
     </ClInclude>
+    <ClInclude Include="include\core\FunctionPointer.h">
+      <Filter>헤더 파일\core</Filter>
+    </ClInclude>
+    <ClInclude Include="include\events\Finger.h">
+      <Filter>헤더 파일\events</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp">
@@ -318,6 +324,12 @@
       <Filter>소스 파일\events</Filter>
     </ClCompile>
     <ClCompile Include="src\events\Sensors.cpp">
+      <Filter>소스 파일\events</Filter>
+    </ClCompile>
+    <ClCompile Include="src\core\FunctionPointer.cpp">
+      <Filter>소스 파일\core</Filter>
+    </ClCompile>
+    <ClCompile Include="src\events\Finger.cpp">
       <Filter>소스 파일\events</Filter>
     </ClCompile>
   </ItemGroup>
