--- a/NETSDL2/NETSDL2.vcxproj
+++ b/NETSDL2/NETSDL2.vcxproj
@@ -104,6 +104,7 @@
     <ClInclude Include="include\events\Event.h" />
     <ClInclude Include="include\events\Events.h" />
     <ClInclude Include="include\events\Finger.h" />
+    <ClInclude Include="include\events\Gesture.h" />
     <ClInclude Include="include\events\Joysticks.h" />
     <ClInclude Include="include\events\Keycode.h" />
     <ClInclude Include="include\events\Keysym.h" />
@@ -154,6 +155,7 @@
     <ClCompile Include="src\events\Event.cpp" />
     <ClCompile Include="src\events\Events.cpp" />
     <ClCompile Include="src\events\Finger.cpp" />
+    <ClCompile Include="src\events\Gesture.cpp" />
     <ClCompile Include="src\events\Joysticks.cpp" />
     <ClCompile Include="src\events\Keycode.cpp" />
     <ClCompile Include="src\events\Keysym.cpp" />
