--- a/NETSDL2/NETSDL2.vcxproj.filters
+++ b/NETSDL2/NETSDL2.vcxproj.filters
@@ -186,6 +186,9 @@
     <ClInclude Include="include\events\Finger.h">
       <Filter>헤더 파일\events</Filter>
     </ClInclude>
+    <ClInclude Include="include\events\Gesture.h">
+      <Filter>헤더 파일\events</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp">
@@ -330,6 +333,9 @@
       <Filter>소스 파일\core</Filter>
     </ClCompile>
     <ClCompile Include="src\events\Finger.cpp">
+      <Filter>소스 파일\events</Filter>
+    </ClCompile>
+    <ClCompile Include="src\events\Gesture.cpp">
       <Filter>소스 파일\events</Filter>
     </ClCompile>
   </ItemGroup>
